加入物理系统前

--- a/FlappyBird/manifest.json
+++ b/FlappyBird/manifest.json
@@ -7,15 +7,17 @@
 		"libs/modules/eui/eui.js",
 		"libs/modules/tween/tween.js",
 		"libs/modules/dragonBones/dragonBones.js",
-		"promise/bin/promise.js"
+		"promise/bin/promise.js",
+		"libs/modules/physics/physics.js"
 	],
 	"game": [
 		"bin-debug/UI/UIBase.js",
-		"bin-debug/Common/Utils/UtilsClass/LListener.js",
+		"bin-debug/Common/Utils/UtilsClass/LEvent.js",
 		"bin-debug/Common/Define/Event.js",
 		"bin-debug/Common/Define/GlobalConfig.js",
 		"bin-debug/Common/Manager/GameManager.js",
 		"bin-debug/Common/Manager/UIManager.js",
+		"bin-debug/Common/p2DebugDraw.js",
 		"bin-debug/Common/Utils/EffectUtils.js",
 		"bin-debug/Common/Utils/Functions.js",
 		"bin-debug/Common/Utils/Global.js",
@@ -23,8 +25,8 @@
 		"bin-debug/Common/Utils/NativeApi.js",
 		"bin-debug/Common/Utils/RegUtils.js",
 		"bin-debug/Common/Utils/UtilsClass/BitmapBlink.js",
-		"bin-debug/Common/Utils/UtilsClass/LEvent.js",
 		"bin-debug/Common/Define/Define.js",
+		"bin-debug/Common/Utils/UtilsClass/LListener.js",
 		"bin-debug/Common/Utils/UtilsClass/TipsUtils.js",
 		"bin-debug/GamePlay/GameDefine.js",
 		"bin-debug/GamePlay/GamePlay.js",
@@ -32,7 +34,6 @@
 		"bin-debug/LoadingUI.js",
 		"bin-debug/Main.js",
 		"bin-debug/ThemeAdapter.js",
-		"bin-debug/UI/Temp.js",
 		"bin-debug/AssetAdapter.js",
 		"bin-debug/UI/UIGameOver.js",
 		"bin-debug/UI/UIGamePlay.js",
